--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/FrikkieSnyman/COS301_GroupProject",
   "dependencies": {
+    "angular": "^1.3.15",
     "bootstrap": "^3.3.4",
-    "express": "^4.12.3"
+    "express": "^4.12.3",
+    "jquery": "^2.1.4"
   },
   "devDependencies": {
     "grunt": "^0.4.5"
