--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
   "dependencies": {
     "angular": "^1.3.15",
     "bootstrap": "^3.3.4",
+    "ejs": "^2.3.1",
     "express": "^4.12.3",
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "reload": "^0.1.0",
+    "sendevent": "^1.0.4",
+    "uglify-js": "^2.4.21",
+    "watch": "^0.16.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5"
