--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A web server that helps estimate the time it will take to perform programming task. By using experts input.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon main.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "watch": "^0.16.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "nodemon": "^1.3.7"
   }
 }
