--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/FrikkieSnyman/COS301_GroupProject",
   "dependencies": {
     "angular": "^1.3.15",
+    "body-parser": "^1.12.4",
     "bootstrap": "^3.3.4",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
