--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A web server that helps estimate the time it will take to perform programming task. By using experts input.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nodeunit test.js",
     "start": "nodemon main.js"
   },
   "repository": {
