--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sendevent": "^1.0.4",
     "uglify-js": "^2.4.21",
     "unit.js": "^2.0.0",
-    "watch": "^0.16.0"
+    "watch": "^0.16.0",
+    "nodeunit": "*"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
