--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EstiamteSwarm",
+  "name": "EstimateSwarm",
   "version": "0.0.1",
   "description": "A web server that helps estimate the time it will take to perform programming task. By using experts input.",
   "main": "index.js",
