cahnges in config file

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/FrikkieSnyman/COS301_GroupProject.git"
   },
   "keywords": [
-    "EstiamteSwarm"
+    "Estimation Swarm"
   ],
   "author": "Hanrich/Hugo/Frikkie/Andre/Chris",
   "license": "ISC",
