--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
-
+#For Latex
 *.aux
 *.glo
 *.idx
@@ -49,3 +49,4 @@ node_modules
 *.mtc1
 *.out
 *.synctex.gz
+*.pdf
