--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "nodeunit tests",
-    "coveralls":"jscoverage lib && SQUARE_COV=1 nodeunit --reporter=lcov tests | coveralls",
+    "coveralls": "jscoverage lib && SQUARE_COV=1 nodeunit --reporter=lcov tests | coveralls",
     "start": "nodemon main.js"
   },
   "repository": {
@@ -39,6 +39,7 @@
   "devDependencies": {
     "coveralls": "^2.11.2",
     "grunt": "^0.4.5",
+    "grunt-coveralls": "^1.0.0",
     "jscoverage": "^0.5.9",
     "nodemon": "^1.3.7"
   }
