Update to config file

--- a/.jscsrc
+++ b/.jscsrc
@@ -1,9 +1,10 @@
 {
     "preset": "google",
+    "maximumLineLength": 100,
     "validateLineBreaks": "LF",
     "validateIndentation": {
         "value": "\t",
         "includeEmptyLine": true
     },
-    "excludeFiles": ["node_modules/**"]
+    "excludeFiles": ["node_modules/**", "*.min.js"]
 }
