--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/FrikkieSnyman/COS301_GroupProject",
   "dependencies": {
     "angular": "^1.3.15",
+    "angular-material": "^0.10.0",
     "body-parser": "^1.12.4",
     "bootstrap": "^3.3.4",
     "ejs": "^2.3.1",
