--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/FrikkieSnyman/COS301_GroupProject",
   "dependencies": {
-    "angular": "^1.3.15",
+    "angular": "^1.4.1",
     "angular-material": "^0.10.0",
     "body-parser": "^1.12.4",
     "bootstrap": "^3.3.4",
@@ -38,6 +38,7 @@
     "watch": "^0.16.0"
   },
   "devDependencies": {
+    "angular-material": "^0.10.0",
     "coveralls": "^2.11.2",
     "grunt": "^0.4.5",
     "grunt-coveralls": "^1.0.0",
