--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,7 @@
     "angular": "^1.4.1",
     "angular-animate": "^1.4.1",
     "angular-aria": "^1.4.1",
-    "angular-material": "^0.10.0"
+    "angular-material": "^0.10.0",
+    "angular-material-icons": "^0.5.0"
   }
 }
