--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "sendevent": "^1.0.4",
     "uglify-js": "^2.4.21",
     "unit.js": "^2.0.0",
+    "jscoverage": "^0.5.9",
+    "coveralls": "^2.11.2",
     "watch": "^0.16.0"
   },
   "devDependencies": {
