--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^3.3.4",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "express-jwt": "^3.0.1",
     "jquery": "^2.1.4",
     "jsonwebtoken": "^5.0.2",
     "mongoose": "^4.0.3",
