--- a/www/package.json
+++ b/www/package.json
@@ -13,6 +13,7 @@
     "angular-animate": "^1.4.1",
     "angular-aria": "^1.4.1",
     "angular-material": "^0.10.0",
-    "angular-route": "^1.4.1"
+    "angular-route": "^1.4.1",
+    "d3": "^3.5.5"
   }
 }
