--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^2.1.4",
     "jsonwebtoken": "^5.0.2",
     "mongoose": "^4.0.3",
+    "nodemailer": "^1.4.0",
     "nodeunit": "*",
     "reload": "^0.1.0",
     "sendevent": "^1.0.4",
