--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A web server that helps estimate the time it will take to perform programming task. By using experts input.",
   "main": "index.js",
   "scripts": {
-    "test": "nodeunit tests",
+    "test": "NODE_ENV=1 && nodeunit tests",
     "coveralls": "jscoverage lib && CUSTOM_COV=1 nodeunit --reporter=lcov tests | coveralls",
     "start": "nodemon main.js"
   },
@@ -46,6 +46,7 @@
     "grunt": "^0.4.5",
     "grunt-coveralls": "^1.0.0",
     "jscoverage": "^0.5.9",
+    "mockgoose": "^2.0.3",
     "nodemon": "^1.3.7"
   }
 }
