--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+public/lib
+
 #For Latex
 *.aux
 *.glo
