--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 node_js:
-  - "0.12"
-cache:
-  directories:
-    - node_modules
-after_script:
-  - npm run coveralls
+  - "0.10"
+env:
+  - NODE_ENV=travis
+services:
+  - mongodb
