--- a/.jscsrc
+++ b/.jscsrc
@@ -6,5 +6,5 @@
         "value": "\t",
         "includeEmptyLine": true
     },
-    "excludeFiles": ["node_modules/**", "*.min.js"]
+    "excludeFiles": ["node_modules/**", "*.min.js", "public/lib/**"]
 }
