--- a/package.json
+++ b/package.json
@@ -13,26 +13,27 @@
     "postinstall": "bower install --config.interactive=false"
   },
   "dependencies": {
-    "async": "~1.4.0",
-    "body-parser": "~1.13.2",
-    "bower": "~1.4.1",
-    "chalk": "~1.1.0",
-    "compression": "~1.5.1",
+    "async": "^0.9.2",
+    "body-parser": "~1.9.0",
+    "bower": "~1.3.8",
+    "chalk": "~0.5",
+    "compression": "~1.2.0",
     "connect-flash": "~0.1.1",
-    "connect-mongo": "~0.8.2",
-    "consolidate": "~0.13.1",
-    "cookie-parser": "~1.3.5",
-    "express": "~4.13.1",
-    "express-session": "~1.11.3",
-    "forever": "~0.14.2",
-    "glob": "~5.0.14",
+    "connect-mongo": "~0.4.1",
+    "consolidate": "~0.10.0",
+    "cookie-parser": "~1.3.2",
+    "express": "~4.10.1",
+    "express-session": "~1.9.1",
+    "forever": "~0.11.0",
+    "fs": "0.0.2",
+    "glob": "~4.0.5",
     "grunt-cli": "~0.1.13",
-    "helmet": "~0.10.0",
-    "httpbackend": "^1.2.1",
+    "helmet": "~0.5.0",
     "lodash": "~2.4.1",
     "method-override": "~2.3.0",
     "mongoose": "~3.8.8",
     "morgan": "~1.4.1",
+    "multiparty": "^4.1.2",
     "nodemailer": "~1.3.0",
     "passport": "~0.2.0",
     "passport-facebook": "~1.0.2",
