--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,8 @@
     "angular-material": "~0.10.0",
     "angular-ui-tree": "~2.6.0",
     "angular-aria": "~1.4.2"
+  },
+  "resolutions": {
+    "angular": "^1.3.0 || >1.4.0-beta.0"
   }
 }
