--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "jquery": "~2.1.4",
     "angular-material": "~0.10.0",
     "angular-ui-tree": "~2.6.0",
-    "angular-aria": "~1.4.2"
+    "angular-aria": "~1.4.2",
+    "d3": "~3.5.6"
   },
   "resolutions": {
     "angular": "^1.3.0 || >1.4.0-beta.0"
