--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-mongo": "~0.4.1",
     "consolidate": "~0.10.0",
     "cookie-parser": "~1.3.2",
+    "cors": "^2.7.1",
     "express": "~4.10.1",
     "express-session": "~1.9.1",
     "forever": "~0.11.0",
