--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-material": "~0.11.0",
     "angular-ui-tree": "~2.6.0",
     "angular-aria": "~1.4.2",
-    "d3": "~3.5.6"
+    "d3": "~3.5.6",
+    "angular-socket-io": "~0.7.0"
   },
   "resolutions": {
     "angular": "^1.3.0 || >1.4.0-beta.0"
