--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport-linkedin": "~0.1.3",
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.2",
+    "socket.io": "^1.3.6",
     "swig": "~1.4.1"
   },
   "devDependencies": {
