Ek maak soos website
Fixed the io linter error

--- a/.jshintrc
+++ b/.jshintrc
@@ -21,7 +21,8 @@
 		"jasmine": true,
 		"angular": true,
 		"ApplicationConfiguration": true,
-		"$": false
+		"$": false,
+		"io": false
 	},
 	"predef": [ // Extra globals.
 		"define",
