--- a/bower.json
+++ b/bower.json
@@ -3,23 +3,25 @@
   "version": "0.0.1",
   "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js",
   "dependencies": {
-    "bootstrap": "~3",
     "angular": "~1.4.4",
-    "angular-resource": "~1.2",
-    "angular-mocks": "~1.4.3",
-    "angular-cookies": "~1.2",
     "angular-animate": "~1.4.4",
-    "angular-touch": "~1.2",
-    "angular-sanitize": "~1.2",
-    "angular-bootstrap": "~0.11.2",
-    "angular-ui-utils": "~0.1.1",
-    "angular-ui-router": "~0.2.11",
-    "jquery": "~2.1.4",
-    "angular-material": "~0.11.0",
-    "angular-ui-tree": "~2.6.0",
     "angular-aria": "~1.4.2",
+    "angular-bootstrap": "~0.11.2",
+    "angular-cookies": "~1.2",
+    "angular-material": "~0.11.0",
+    "angular-mocks": "~1.4.3",
+    "angular-resource": "~1.2",
+    "angular-sanitize": "~1.2",
+    "angular-socket-io": "~0.7.0",
+    "angular-touch": "~1.2",
+    "angular-ui-router": "~0.2.11",
+    "angular-ui-tree": "~2.6.0",
+    "angular-ui-utils": "~0.1.1",
+    "bootstrap": "~3",
     "d3": "~3.5.6",
-    "angular-socket-io": "~0.7.0"
+    "font-awesome": "~4.4.0",
+    "jquery": "~2.1.4",
+    "textAngular": "~1.4.6"
   },
   "resolutions": {
     "angular": "^1.3.0 || >1.4.0-beta.0"
