--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "d3": "~3.5.6",
     "font-awesome": "~4.4.0",
     "jquery": "~2.1.4",
-    "textAngular": "~1.4.6"
+    "textAngular": "~1.4.6",
+    "angular-socket.io-mock": "~1.1.0"
   },
   "resolutions": {
     "angular": "^1.3.0 || >1.4.0-beta.0"
