--- a/bower.json
+++ b/bower.json
@@ -22,11 +22,8 @@
     "font-awesome": "~4.4.0",
     "jquery": "~2.1.4",
     "textAngular": "~1.4.6",
-<<<<<<< HEAD
-    "angular-socket.io-mock": "~1.1.0"
-=======
+    "angular-socket.io-mock": "~1.1.0",
     "pdfjs-bower": "~1.0.233"
->>>>>>> master
   },
   "resolutions": {
     "angular": "^1.3.0 || >1.4.0-beta.0"
